--- a/style.css
+++ b/style.css
@@ -26,17 +26,23 @@ body {
 
 .news {
 	font-family: 'Sansita', sans-serif;
-	display: block;
+	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
+	position: fixed;
 	text-align: center;
-	position: absolute;
-	margin: 10px;
-	top: 20px;
-	font-size: 36px;
-	font-weight: bold;
+	top: 0;
+	height: 15%;
+	width:700px;
+	max-width: 100%;
+	margin: 20px;
+	/* padding: 5px; */
+	font-size: 22px;
 	letter-spacing: 2px;
-	color: rgb(255, 255, 255);
+	color: rgb(255, 255, 255); 
+	width: 80%;
+	line-height: 130%;
 }
 
 .wrapper {
@@ -48,7 +54,9 @@ body {
 	overflow: hidden;
 	margin: 20px;
 	padding: 40px;
-	width: 500px;
+	padding-top: 20px;
+	max-width: 600px;
+	width: 100%;
 	text-align: center;
 	background: rgba(97, 106, 169, 0.74);
 	box-shadow: 0 4px 30px rgba(28, 127, 131, 0.1);
@@ -61,9 +69,7 @@ body {
 
 .wrapper h1 {
 	font-size: 36px;
-	margin-bottom: 30px;
-	margin-right: 20px;
-	margin-left: 20px;
+	padding-bottom: 10px;
 }
 
 .info {
@@ -72,12 +78,11 @@ body {
 	justify-content: space-evenly;
 	position: absolute;
 	top: -10px;
-	right: 10px;
+	right: 1px;
 	width: 40px;
 	height: 40%;
-	font-size: 45px;
-	padding: 10px;
-	margin: 5px;
+	font-size: 22px;
+	padding: 5px;
 	cursor: pointer;
 	transition: color 0.3s;
 }
@@ -101,13 +106,12 @@ body {
 
 .converter-body input {
 	width: 100%;
-	font-size: 12px;
+	font-size: 18px;
 	margin-bottom: 10px;
 }
 
 .converter-body input,
 .converter-body select {
-	
 	color: var(--first-color);
 	border: 1px solid;
 	border-radius: 5px;
@@ -139,17 +143,24 @@ body {
 
 .converter-body option {
 	color: rgba(0, 0, 0, 0.61);
-	font-size: 22px;
+}
+
+#currency-one > option, #currency-two > option {
+	background: rgba(97, 106, 169, 0.74);
+	box-shadow: 0 4px 30px rgba(28, 127, 131, 0.1);
+	backdrop-filter: blur(7.6px);
+	-webkit-backdrop-filter: blur(7.6px); 
+	font-size: 0.9rem;
 }
 
 .changing {
 	display: flex;
 	justify-content: center;
 	align-self: flex-end;
-	width: 100px;
-	margin: 20px auto 0;
-	padding: 10px 20px;
-	font-size: 16px;
+	width: 80px;
+	margin: 5px auto 0;
+	padding: 5px 20px;
+	font-size: 18px;
 	color: aliceblue;
 	background: linear-gradient(90deg, #0162c8, #55e7fc);
 	border-radius: 25px;
@@ -176,37 +187,48 @@ body {
 	padding-top: 15px;
 	font-weight: bold;
 }
+.rate-info {
+	padding-top: 20px;
+}
 
 .explanation {
 	display: none;
 	position: absolute;
-	width: 50%;
-	height: 100%;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	overflow: hidden;
+	margin: 20px;
+	padding: 40px;
+	/* padding-top: 20px; */
+	max-width: 500px;
+	width: 100%;
+	text-align: center;
 }
 
 .modal {
-	position: absolute;
-	display: flex;
+	/* position: relative; */
+	/* display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	text-align: center;
-	margin: auto;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 600px;
-	height: 360px;
-	padding: 30px 60px;
+	text-align: center; */
+
+	/* top: 50%; 
+	left: 50%; */
+	/* transform: translate(-50%, -50%); */
+	/* width: 500px;
+	max-width: 100%; */
+	/* padding: 10px 20px; */
 	border-radius: 15px;
-	background-color: rgb(62, 88, 134);
+	background-color: rgb(21, 56, 116);
 	color: #fff;
 	overflow: hidden;
 }
 
 .modal h3 {
-	margin-top: 20px;
-	margin-bottom: 20px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 	font-size: 24px;
 	text-decoration: underline;
 }
@@ -216,11 +238,11 @@ body {
 	margin-bottom: 10px;
 	margin-left: 10px;
 	margin-right: 10px;
-	font-size: 20px;
+	font-size: 16px;
 }
 
 .wishes {
-	margin-top: 20px;
+	margin-top: 16px;
 }
 
 .modal .close {
@@ -228,10 +250,10 @@ body {
 	text-align: center;
 	justify-content: center;
 	align-items: center;
-	margin: 20px auto;
+	margin: 10px auto;
 	padding: 10px 20px;
-	font-size: 16px;
-	width: 100px;
+	font-size: 10px;
+	width: 80px;
 	background: linear-gradient(90deg, #0162c8, #55e7fc);
 	color: aliceblue;
 	letter-spacing: 3px;
@@ -258,13 +280,13 @@ body {
 	bottom: 10px;
 	right: -100px;
 	width: 50px;
-	height: 170px;
+	height: 140px;
 	transition: transform 0.3s;
 }
 
 .color {
-	width: 40px;
-	height: 40px;
+	width: 30px;
+	height: 30px;
 	border: 1px solid black;
 	border-radius: 50%;
 	cursor: pointer;
@@ -327,146 +349,34 @@ footer {
 	color: blue;
 }
 
-@media (min-width: 320px) {
-	.news{
-	font-size: 18px;
-	}
-	
-	.wrapper {
-		margin: 15px;
-		padding: 10px;
-		width: 95%;
-	}
+@media (max-width:500px) {
 	.wrapper h1 {
-		font-size: 30px;
-		margin-right: 25px;
-		margin-left: 25px;
-		/* margin-bottom: 2px; */
+		font-size: 26px;
 	}
-	.converter-body input {
-		font-size: 18px;
-	}
-	.modal {
-		width: 90%;
-		padding: 5px;
-		margin: auto;
-	}
-	.modal h3 {
-		text-align: center;
-		margin-top: 15px;
-	}
-	.modal p {
-		margin-bottom: 10px;
-		margin-left: 20px;
+	.news {
 		font-size: 16px;
 	}
-	.modal .close {
-		width: 100px;
+	.modal p {
 		font-size: 12px;
 	}
-	.info {
-		height: 40%;
-		font-size: 18px;
-		padding: 5px;
-		margin: 5px;
-		right: 2px;
+	.colors {
+		width: 30px;
+		height: 100px;
 	}
-	.converter-body{
-		margin-top: 25px;
+	.color {
+		width: 25px;
+		height: 25px;
 	}
-}
-
-/* @media (min-width: 390px) {
-	.wrapper {
-		width: 380px;
-	}
-	.rate-info,
-	.total {
-		font-size: 20px;
-	}
-} */
-
-@media (min-width: 500px) {
-	.wrapper {
-		width: 480px;
-	}
-
-	.info {
-		height: 40%;
-		font-size: 18px;
-		padding: 5px;
-		margin: 5px;
-	}
-	.converter-body{
-		margin: 15px;
-	}
-	
-	/* .changing{
-		font-size: 20px;
-		width: 100px;
-		height: 30px;
+	/* .converter-body input {
+		font-size: 16px;
 	} */
-	/* teraz i wyskakuje poza obiekt, dlaczego  */
 }
 
-@media (min-width: 760px) {
-	.wrapper {
-		width: 620px;
-	}
-
-	.wrapper h1 {
-		font-size: 44px;
-		margin-bottom: 28px;
-	}
-
-	.rate-info,
-	.total {
-		font-size: 26px;
-	}
-
-	.rate-info {
-		margin-top: 10px;
-	}
+@media (max-width:430px) {
 	.converter-body input {
-		width: 100%;
-		font-size: 28px;
-		margin-bottom: 30px;
+		width: 138%;
 	}
-	.converter-body select {
-		font-size: 24px;
-	}
-	.changing {
-		font-size: 22px;
-	}
-}
-
-@media (min-width: 912px) {
-	.wrapper {
-		width: 760px;
-	}
-
-	.wrapper h1 {
-		font-size: 48px;
-		margin-top: 16px;
-		margin-bottom: 38px;
-	}
-
-	.rate-info {
-		margin-top: 10px;
-	}
-	.converter-body input {
-		width: 100%;
-		font-size: 30px;
-		margin-bottom: 28px;
-	}
-
-	.converter-body select {
-		font-size: 28px;
-	}
-	.changing {
-		font-size: 30px;
-	}
-	.info{
-		font-size: 26px;
+	.news {
+		font-size: 14px;
 	}
 }
