--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+@font-face
+
+{
+
+font-family: LibreFranklin;
+
+src:url(LibreFranklin-VariableFont_wght.ttf);
+
+}
+
+
 #logo {
     display:block;
     margin-top: 20px;
@@ -11,7 +22,7 @@
     display:block;
     margin-left: auto;
     margin-right: auto;
-    padding: 40px 60px;
+    padding: 40px 60px 0px 60px;
     min-width: 200px;
     max-width: 1000px;
 }
@@ -24,10 +35,28 @@
     height: 50px;
     box-sizing: border-box;
     border: 1px solid #e0e0e0;
-    border-radius: 15px;
+    border-radius: 10px;
     background-color: #edffff;
     font-size: 20px;
+    font-weight: bold;
+    color: #003B9D;
     resize: none;
+    font-family: LibreFranklin;
+    padding: 10px;
+}
+
+textarea:focus {
+    outline: none !important;
+    border-color: #003B9D !important;
+}
+
+#signature {
+    font-family: LibreFranklin;
+    font-size: 12px;
+    color: #000051;
+    font-weight: bold;
+    margin: 0px;
+    padding-top: 5px;
 }
 
 #Search-div {
@@ -39,12 +68,14 @@
     border: none;
     color: white;
     padding: 15px;
-    border-radius: 4px;
+    border-radius: 7px;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
     cursor: pointer;
+    margin-top: 25px;
     margin-bottom: 50px;
+    font-family: LibreFranklin;
 }
 #Results {
     height: auto;
@@ -54,96 +85,96 @@
     margin-right: auto;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
     #Results {
-      width: 80vw;
-      min-width: 350px;
+      width: 380px;
       display: block;
       margin-left: auto;
       margin-right: auto;
+      padding: 0px;
     }
   }
 
 .border{
-    background-color: #edffff;
-    height: 400px;
+    background-color: #C5CAE9;
+    height: 370px;
     margin: 20px;
     padding: 10px;
-    border: #000051 solid;
-    border-radius: 5px; 
+    border: C5CAE9 solid;
+    border-radius: 10px; 
 }
 
 .text {
+    font-family: LibreFranklin;
     float: right;
     height: auto;
     width: 50%;
     word-wrap: break-word;
     margin: 10px;
-    font-size: 22px;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: 900 ;
+    color: #003B9D;
 }
 
 .textAuthor {
+    font-family: LibreFranklin;
     float: right;
     height: auto;
     width: 50%;
     word-wrap: break-word;
     margin: 10px;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
+    color: #003B9D;
 }
 
-.textSubject {
-    float: right;
-    height: auto;
-    width: 50%;
-    word-wrap: break-word;
-    margin: 10px;
-    font-size: 20px;
-    font-weight: bold;
-}
 
 .textPublication {
+    font-family: LibreFranklin;
     float: right;
     height: auto;
     width: 50%;
     word-wrap: break-word;
     margin: 10px;
-    font-size: 20px;
+    font-size: 14px;
+    color: #003B9D;
     
 }
 
 .textPages {
+    font-family: LibreFranklin;
     float: right;
     height: auto;
     width: 50%;
     word-wrap: break-word;
     margin: 10px;
-    font-size: 20px;
+    font-size: 14px;
+    color: #003B9D;
     
 }
 
 .img {
+    padding: 14px;
     vertical-align: top;
-    width: 40%;
+    width: 35%;
     max-height: 250px;
     overflow:auto;
 }
 
 .button {
     float: right;
-    margin: 40px;
+    margin: 30px;
 	box-shadow: 0px 1px 0px 0px #f0f7fa;
 	background-color:#000051;
-	border-radius:6px;
+	border-radius:7px;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Arial;
+	font-family: LibreFranklin;
 	font-size:15px;
-	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
 	text-shadow:0px -1px 0px #5b6178;
+    border: #000051;
     
 }
 .button:hover {
