--- a/style.css
+++ b/style.css
@@ -75,24 +75,6 @@ body {
   filter: brightness(0.5);
 }
 
-.frontsite__img {
-  max-width: 80%;
-  max-height: 100%;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.frontsite__img img {
-  display: inline-block;
-  max-height: 70%;
-  position: absolute;
-  top: 50%;
-  left: 70%;
-  transform: translate(-50%, -50%);
-}
 
 .header__description {
   display: inline-block;
@@ -148,7 +130,7 @@ body {
 
 .section__title {
   max-width: 80%;
-  margin: 0 12rem 12rem 12rem;
+  margin: 2rem 12rem 12rem 12rem;
   font-size: 5rem;
 }
 
@@ -196,9 +178,8 @@ body {
 }
 
 .section__header h1 {
-  /* text-transform: uppercase; */
   max-width: 80%;
-  margin: 0 12rem 12rem 12rem;
+  margin: 2rem 12rem 12rem 12rem;
   font-size: 5rem;
 }
 
@@ -223,7 +204,6 @@ body {
 }
 
 .search__container input {
-  /* line-height: 2rem; */
   text-transform: capitalize;
   width: 80rem;
   border: none;
@@ -239,7 +219,6 @@ body {
 .character__data {
   display: inline-block;
   margin: 0 auto;
-  /* border:1px solid rgba(66, 68, 90, 1); */
   font-size: 6rem;
   width: 70%;
   margin: 5rem 15rem 15rem 15rem;
@@ -249,10 +228,7 @@ body {
 
 .character__information {
   display: inline-block;
-  /* float: right; */
   text-align: left;
-  /* margin: 4rem 10rem 1.5rem 1.5rem; */
-  /* border: 3px solid #73AD21; */
   padding: 1.5rem;
   color: var(--color-tertiary);
   max-width: 50%;
@@ -269,16 +245,11 @@ body {
 
 .character__image {
   float: left;
-  /* margin: 0.1rem; */
   width: 20rem;
   height: 20rem;
   background-color: #7561bd;
-  /* border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px; */
   border-radius: 50%;
   margin: 4rem;
-
-  /* border: 3px solid yellow; */
 }
 
 .show__more {
@@ -306,12 +277,32 @@ body {
   flex-direction: column;
   align-items: center;
   background-size: cover;
-  /* background-color: #022d55; */
   border-radius: 0.5rem;
   transition: transform 1s, opacity 1s;
+  position: relative;
+}
+
+
+.footer__img {
+  max-width: 80%;
+  max-height: 100%;
+  z-index: -1;
+
+}
+
+.footer__img img {
+  display: inline-block;
+  display: flex;
+  max-height: 70%;
+  position: absolute;
+  top: 50%;
+  left: 80%;
+  transform: translate(-50%, -50%);
+
 }
 
 .footer__copyright {
+  position: absolute;
   margin: 5rem 0 0 0 ;
   font-size: 3rem;
 }
@@ -324,6 +315,7 @@ body {
 
 .links__icons{
   font-size: 25rem;
+  position: absolute;
 }
 
 .fa-twitter{
