--- a/style.css
+++ b/style.css
@@ -1,16 +1,23 @@
-body {
-  background-color: #f5f5f5;
+body
+{
+  background-color: #FFFFE0;
 }
-.weather-description {
+
+.weather-description
+{
   font-size: 32px;
 }
+
 .loader,
-.loader:after {
+.loader:after
+{
   border-radius: 50%;
   width: 10em;
   height: 10em;
 }
-.loader {
+
+.loader
+{
   margin: 60px auto;
   font-size: 10px;
   position: relative;
@@ -25,17 +32,42 @@ body {
   -webkit-animation: load8 1.1s infinite linear;
   animation: load8 1.1s infinite linear;
 }
-@-webkit-keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
+
+.header
+{
+  margin: 20pt;
+  padding: 20pt;
+  text-align: center;
+  font-size: 30pt;
+  color: #FF0000;
+  background-color: #f4e55f;
 }
-@keyframes load8 {
+
+.geolocalization-container
+{
+  margin: 20pt;
+  padding: 20pt;
+  background-color: #f4e55f;
+}
+
+.weather-container
+{
+  margin: 20pt;
+  padding: 20pt;
+  background-color: #F0E68C;
+}
+
+.weather-description
+{
+  height: 10%;
+}
+
+.weather-image{
+  height: 100px;
+}
+
+@-webkit-keyframes load8
+{
   0% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
@@ -46,3 +78,14 @@ body {
   }
 }
 
+@keyframes load8
+{
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
