--- a/style.css
+++ b/style.css
@@ -33,14 +33,11 @@ body {
   z-index: 1;
 }
 
-.nav ul li {
+.links ul li {
   display: flex;
   float: right;
   list-style-type: none;
   text-align: center;
-}
-
-.nav ul li a {
   font-size: 2.5rem;
   text-decoration: none;
   color: var(--color-tertiary);
@@ -49,16 +46,26 @@ body {
   font-family: 'Schoolbell', cursive;
 }
 
-.nav ul li:nth-child(1) {
+/* .links ul li a {
+  font-size: 2.5rem;
+  text-decoration: none;
+  color: var(--color-tertiary);
+  padding: 2rem 2.5rem;
+  color: var(--color-primary);
+  font-family: 'Schoolbell', cursive;
+} */
+
+.links ul li:nth-child(1) {
   float: left;
 }
 
-.nav ul li:nth-child(2) {
+/* .links ul li:nth-child(2) {
   float: right;
-}
+} */
 
-.header {
+/* .header {
   height: 100vh;
+  width: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -66,13 +73,14 @@ body {
   background-size: cover;
   color: var(--color-tertiary-brighter);
   border-radius: 0.5rem;
-}
+} */
 
 .background__front {
   width: 100%;
   height: 100vh;
   object-fit: cover;
   filter: brightness(0.5);
+  text-align: center;
 }
 
 
@@ -80,12 +88,13 @@ body {
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 50%;
+  max-width: 90%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: var(--color-tertiary-brighter);
+  filter: brightness(100);
 }
 
 .header__description h1 {
@@ -122,17 +131,17 @@ body {
   transition: transform 1s, opacity 1s;
 }
 
-/* Section --1 */
-
-#section--1 {
-  padding: 0 8rem 0;
-}
-
 .section__title {
-  max-width: 80%;
-  margin: 2rem 12rem 12rem 12rem;
+  margin: 6rem 2rem 12rem 2rem;
   font-size: 5rem;
+  text-align: center;
 }
+
+/* Section --2 */
+
+
+
+
 
 .spells__information {
   font-size: 4rem;
@@ -142,15 +151,15 @@ body {
   margin: 2rem;
   display: inline-block;
   width: 30%;
-  height: 10rem;
-  /* line-height: 5rem; */
+  height: 12rem;
   text-align: center;
   overflow: hidden;
 }
 
 .spells__information p {
   position: relative;
-  top: 50%;
+  padding:0.5rem;
+  top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -159,13 +168,17 @@ body {
   font-size: 1.5rem;
 }
 
-.spells__container :hover {
-  background-color: var(--color-tertiary-brighter);
-  color: white;
-  cursor: pointer;
+.spells__container--1{
+  text-align: center;
 }
 
-/* Section--2 */
+.spells__container--2{
+  text-align: center;
+}
+
+
+
+/* Section--1 */
 
 .section__container {
   z-index: 100;
@@ -173,21 +186,12 @@ body {
   text-align: center;
 }
 
-.section__header {
-  margin-left: 5rem;
-}
-
-.section__header h1 {
-  max-width: 80%;
-  margin: 2rem 12rem 12rem 12rem;
-  font-size: 5rem;
-}
-
 .search__container {
-  margin: 0 5rem 5rem 0;
+  margin-top: 5rem;
   padding: 0 2rem 0 2rem;
   font-size: 3.5rem;
-  float: left;
+  
+  
 }
 
 .search__container button {
@@ -205,7 +209,8 @@ body {
 
 .search__container input {
   text-transform: capitalize;
-  width: 80rem;
+  min-width: 50%;
+  max-width: 70%;
   border: none;
   border-bottom: 2px solid var(--color-tertiary);
   background: transparent;
@@ -290,18 +295,19 @@ body {
 
 }
 
-.footer__img img {
+.footer__img img{
   display: inline-block;
   display: flex;
-  max-height: 70%;
+  max-height: 50%;
   position: absolute;
-  top: 50%;
-  left: 80%;
+  top: 70%;
+  left: 50%;
   transform: translate(-50%, -50%);
 
 }
 
 .footer__copyright {
+  text-align: center;
   position: absolute;
   margin: 5rem 0 0 0 ;
   font-size: 3rem;
@@ -335,3 +341,108 @@ body {
 .hidden {
   display: none;
 }
+
+.return__button{
+  
+  position: fixed;
+  top: 90%;
+  left: 90%;
+  transform: translate(-50%, -50%);
+  cursor:pointer;
+  z-index: 100;
+  opacity: 0.7;
+}
+
+.fa-chevron-up{
+  font-size: 5rem;
+  text-align: center;
+  width: 5rem;
+  height: 5rem;
+  background-color: var(--color-primary-darker);
+  color: var(--color-primary);
+  border-radius: 1rem;
+  z-index: 100;
+  
+}
+
+
+/* Responsive - settings */
+
+/* -----max-width: 767px-------*/
+
+@media all and (max-width: 767px){
+
+
+.header__description {
+    max-width: 100%;
+  }
+
+.header__description h1 {
+  font-size: 5rem;
+}
+
+
+
+
+
+.search__container input {
+  width: 40rem;
+}
+
+.search__container {
+  margin: 0 0 5rem 0;
+  padding: 0;
+}
+
+.spells__information {
+  font-size: 5rem;
+  width: 80%;
+  height: 15rem;
+}
+
+
+.character__data{
+  margin: 0;
+  width: 90%;
+}
+
+.character__information {
+  max-width: 100%;
+  margin-bottom: 4rem;
+}
+
+.character__information h1 {
+  text-align: center;
+  margin: 2rem;
+}
+
+.character__image {
+  float: none;
+  text-align: center;
+  
+}
+
+
+}
+
+/* -----max-width: 992px-------*/
+@media all and (max-width: 992px){
+  .links ul li {
+    max-width: 100%;
+    justify-content: center;
+    
+  
+  }
+  
+  .links ul li:nth-child(1) {
+    float: none;
+    
+  }
+  
+  .links ul li:nth-child(2) {
+    float: none;
+  }
+
+}
+
+  
